--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -11,6 +11,7 @@
         (valueOnChange)="logValue('datepicker range', $event.detail.value)"
         [disableDates]="datepickerRangeDisableDates"
         [isFullWidth]="true"
+        [isRequired]="true"
       ></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
