--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,23 +6,33 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
+      <elvia-accordion
+        type="overflow"
+        isFullWidth="true"
+        openLabel="Label open"
+        closeLabel="Label close"
+        size="medium"
+        type="normal"
+        (onOpen)="log('Open')"
+        (onClose)="log('Close')"
+        className="e-mb-56"
+      >
+        <div slot="content">
+          Hello there Hello there Hello there Hello there Hello there Hello there Hello there Hello there
+          Hello there Hello there Hello there Hello there Hello there Hello there Hello there Hello there
+          Hello there Hello there Hello there Hello there Hello there Hello there Hello there Hello there
+        </div>
+      </elvia-accordion>
       <span>
         <elvia-accordion
-          openDetailText="(1 av 15)"
-          closeDetailText="(1 av 15)"
-          hasBoldLabel="true"
-          openLabel="Label open"
-          closeLabel="Label close"
           isOpen="true"
-          size="medium"
+          size="large"
           type="normal"
-        >
-          <div slot="content">
-            <h3>Hello there</h3>
-          </div>
-        </elvia-accordion>
+          (onOpen)="log('Open')"
+          (onClose)="log('Close')"
+        ></elvia-accordion>
       </span>
-      <span>hello</span>
+      <span>Custom label</span>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
