--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -583,6 +583,11 @@ body {
   color: #000;
   margin-bottom: 2px;
 }
+@media (max-width: 767px) {
+  .e-alert__content .e-alert__title {
+    text-align: center;
+  }
+}
 .e-alert__content .e-alert__text {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -595,6 +600,11 @@ body {
   text-align: left;
   color: #000;
   max-width: 758px;
+}
+@media (max-width: 767px) {
+  .e-alert__content .e-alert__text {
+    text-align: center;
+  }
 }
 .e-alert__content .e-alert__text ul {
   margin: 0;
@@ -908,7 +918,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
   }
   .e-alert.e-alert--local .e-alert__icon, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__icon {
     margin-right: 0px;
@@ -12187,6 +12196,23 @@ THE SOFTWARE.
   }
 }
 
+.e-title-large {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 44px;
+  line-height: 53px;
+  font-weight: 900;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-large {
+    font-size: 32px;
+    line-height: 34px;
+  }
+}
+
 .e-title-md {
   font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 30px;
@@ -12199,6 +12225,23 @@ THE SOFTWARE.
 }
 @media (max-width: 767px) {
   .e-title-md {
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
+
+.e-title-medium {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-medium {
     font-size: 24px;
     line-height: 29px;
   }
@@ -12221,6 +12264,23 @@ THE SOFTWARE.
   }
 }
 
+.e-title-small {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-small {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
 .e-title-xs {
   font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 18px;
@@ -12233,6 +12293,22 @@ THE SOFTWARE.
 }
 @media (max-width: 767px) {
   .e-title-xs {
+    font-size: 16px;
+  }
+}
+
+.e-title-xsmall {
+  font-family: Red Hat Display, Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-title-xsmall {
     font-size: 16px;
   }
 }
@@ -12306,6 +12382,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-text-large {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large b,
+.e-text-large strong {
+  font-weight: 500;
+}
+
 .e-text-body {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 20px;
@@ -12350,6 +12448,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-text-large-strong {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large-strong b,
+.e-text-large-strong strong {
+  font-weight: 500;
+}
+
 .e-text-lg-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 20px;
@@ -12372,6 +12492,28 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-large-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+@media (max-width: 767px) {
+  .e-text-large-light {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-large-light b,
+.e-text-large-light strong {
+  font-weight: 500;
+}
+
 .e-text-md {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -12384,6 +12526,21 @@ THE SOFTWARE.
 }
 .e-text-md b,
 .e-text-md strong {
+  font-weight: 500;
+}
+
+.e-text-medium {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-medium b,
+.e-text-medium strong {
   font-weight: 500;
 }
 
@@ -12417,6 +12574,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-medium-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-medium-strong b,
+.e-text-medium-strong strong {
+  font-weight: 500;
+}
+
 .e-text-md-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -12432,6 +12604,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-medium-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+.e-text-medium-light b,
+.e-text-medium-light strong {
+  font-weight: 500;
+}
+
 .e-text-sm {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12444,6 +12631,21 @@ THE SOFTWARE.
 }
 .e-text-sm b,
 .e-text-sm strong {
+  font-weight: 500;
+}
+
+.e-text-small {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-small b,
+.e-text-small strong {
   font-weight: 500;
 }
 
@@ -12477,6 +12679,21 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
+.e-text-small-strong {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-small-strong b,
+.e-text-small-strong strong {
+  font-weight: 500;
+}
+
 .e-text-sm-light {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12489,6 +12706,21 @@ THE SOFTWARE.
 }
 .e-text-sm-light b,
 .e-text-sm-light strong {
+  font-weight: 500;
+}
+
+.e-text-small-light {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: #515151;
+}
+.e-text-small-light b,
+.e-text-small-light strong {
   font-weight: 500;
 }
 
