--- a/packages/elvis/src/components/alert.scss
+++ b/packages/elvis/src/components/alert.scss
@@ -52,18 +52,12 @@ $toast-max-width: 400px;
       text-align: left;
       color: colors.color('font-color');
       margin-bottom: 2px;
-      @include breakpoints.breakpoint-up(Mobile) {
-        text-align: center;
-      }
     }
     .e-alert__text {
       @include typography.typography('text-md');
       text-align: left;
       color: colors.color('font-color');
       max-width: 758px;
-      @include breakpoints.breakpoint-up(Mobile) {
-        text-align: center;
-      }
       ul {
         margin: 0;
         margin-top: 8px;
@@ -271,6 +265,10 @@ $toast-max-width: 400px;
       }
       .e-alert__content {
         margin-top: 8px;
+      }
+      .e-alert__title,
+      .e-alert__text {
+        text-align: center;
       }
     }
   }
