--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -102,6 +102,7 @@ $datepicker-max-width: 448px;
       padding: 8px;
       border-radius: 50%;
       margin-right: 8px;
+      &.ewc-datepicker__keyboardbutton--open,
       &:hover {
         background-color: $green;
       }
@@ -146,12 +147,6 @@ $datepicker-max-width: 448px;
     transform: scaleX(1);
   }
 
-  // Error
-  &.ewc-datepicker--error {
-    .MuiInput-underline::after {
-      border: 2px solid $red !important;
-    }
-  }
   &.ewc-datepicker--open {
     .MuiInput-underline::after {
       border: 2px solid $green !important;
@@ -163,6 +158,12 @@ $datepicker-max-width: 448px;
   }
   .MuiInput-underline.Mui-focused {
     @extend %ewc-outline;
+  }
+  // Error
+  &.ewc-datepicker--error {
+    .MuiInput-underline::after {
+      border: 2px solid $red !important;
+    }
   }
 
   // COMPACT INPUT
