fix date range isDirty

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -12,6 +12,7 @@
         [disableDates]="datepickerRangeDisableDates"
         [isFullWidth]="true"
         [isRequired]="true"
+        [value]="datepickerRangeValue"
       ></elvia-datepicker-range>
     </div>
     <!--Inverted version-->
