Typography - Replaced deprecated and added font-color and text-align (#898)
* Typography - Replaced deprecated and added font-color and text-align

--- a/packages/elvis/src/components/alert.scss
+++ b/packages/elvis/src/components/alert.scss
@@ -48,11 +48,15 @@ $toast-max-width: 400px;
     justify-content: center;
     width: 100%;
     .e-alert__title {
-      @include typography.typography('text-caps');
+      @include typography.typography('title-caps');
+      text-align: left;
+      color: colors.color('font-color');
       margin-bottom: 2px;
     }
     .e-alert__text {
-      @include typography.typography('text-description');
+      @include typography.typography('text-md');
+      text-align: left;
+      color: colors.color('font-color');
       max-width: 758px;
       ul {
         margin: 0;
@@ -113,6 +117,7 @@ $toast-max-width: 400px;
     }
     .e-alert__content .e-alert__title {
       @include typography.typography('title-xs');
+      color: colors.color('font-color');
     }
 
     &.e-alert--warn {
@@ -232,6 +237,7 @@ $toast-max-width: 400px;
     }
     .e-alert__title {
       @include typography.typography('text-md-strong');
+      color: colors.color('font-color');
       margin-bottom: 0px;
     }
     .e-alert__close {
@@ -253,13 +259,16 @@ $toast-max-width: 400px;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
       .e-alert__icon {
         margin-right: 0px;
         margin-top: 0px;
       }
       .e-alert__content {
         margin-top: 8px;
+      }
+      .e-alert__title,
+      .e-alert__text {
+        text-align: center;
       }
     }
   }
@@ -283,9 +292,11 @@ $toast-max-width: 400px;
     }
     .e-alert__title {
       @include typography.typography('text-sm-strong');
+      color: colors.color('font-color');
     }
     .e-alert__content .e-alert__text {
-      @include typography.typography('text-info');
+      @include typography.typography('text-sm');
+      color: colors.color('font-color');
     }
     .e-alert__close {
       justify-content: flex-end;
