--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -579,6 +579,8 @@ body {
   letter-spacing: 0.8px;
   text-transform: uppercase;
   color: inherit;
+  text-align: left;
+  color: #000;
   margin-bottom: 2px;
 }
 .e-alert__content .e-alert__text {
@@ -590,6 +592,8 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  text-align: left;
+  color: #000;
   max-width: 758px;
 }
 .e-alert__content .e-alert__text ul {
@@ -660,6 +664,7 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 @media (max-width: 767px) {
   .e-alert.e-alert--global .e-alert__content .e-alert__title {
@@ -882,6 +887,7 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   margin-bottom: 0px;
 }
 .e-alert.e-alert--local .e-alert__close, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__close {
@@ -902,7 +908,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
   }
   .e-alert.e-alert--local .e-alert__icon, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__icon {
     margin-right: 0px;
@@ -910,6 +915,11 @@ body {
   }
   .e-alert.e-alert--local .e-alert__content, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__content {
     margin-top: 8px;
+  }
+  .e-alert.e-alert--local .e-alert__title, .e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__title,
+.e-alert.e-alert--local .e-alert__text,
+.e-alert:not(.e-alert--global):not(.e-alert--toast) .e-alert__text {
+    text-align: center;
   }
 }
 .e-alert.e-alert--toast {
@@ -943,6 +953,7 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-alert.e-alert--toast .e-alert__content .e-alert__text {
   font-family: Red Hat Text, Verdana, sans-serif;
@@ -953,6 +964,7 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-alert.e-alert--toast .e-alert__close {
   justify-content: flex-end;
@@ -2794,6 +2806,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-input > textarea {
   min-height: 16px;
@@ -2881,6 +2894,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-form-field.e-form-field--compact .e-input.e-input---invalid input, .e-form-field.e-form-field--compact .e-input.e-input---invalid textarea,
 .e-form-field.e-form-field--compact .e-input input:invalid,
@@ -6380,6 +6394,8 @@ input:focus {
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-size: 16px;
   line-height: 26px;
+  color: inherit;
+  text-align: left;
 }
 .e-table-footnote.e-table__footnote--compact,
 .e-table__footnote.e-table__footnote--compact {
@@ -6418,6 +6434,7 @@ input:focus {
 .e-table thead th,
 .e-table thead td {
   text-align: left;
+  color: #000;
 }
 .e-table td,
 .e-table th {
@@ -6480,6 +6497,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   padding: 9px 16px;
   line-height: 21px;
 }
@@ -6517,6 +6535,7 @@ input:focus {
 .e-table-mobile thead th,
 .e-table-mobile thead td {
   text-align: left;
+  color: #000;
 }
 .e-table-mobile thead th {
   font-family: Red Hat Display, Verdana, sans-serif;
@@ -6527,6 +6546,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 @media (max-width: 767px) {
   .e-table-mobile thead th {
@@ -6543,6 +6563,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   line-height: 27px;
   padding: 10px 16px;
   text-align: left;
@@ -6599,6 +6620,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   padding: 9px 16px;
   line-height: 21px;
 }
@@ -6611,6 +6633,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-table-mobile.e-table-mobile--sticky-header {
   overflow: auto;
@@ -7077,6 +7100,7 @@ input:focus {
   line-height: 19px;
   letter-spacing: 0.002em;
   color: #fff;
+  text-align: left;
 }
 .e-tooltip__content.e-tooltip__content--bottom, .e-tooltip:hover .e-tooltip__content--bottom.e-tooltip__content, .e-tooltip:focus .e-tooltip__content--bottom.e-tooltip__content {
   top: 100%;
@@ -7179,7 +7203,7 @@ input:focus {
   font-style: unset;
   letter-spacing: unset;
   text-transform: unset;
-  color: inherit;
+  color: #000;
 }
 .e-toggle::after {
   content: "";
@@ -7308,12 +7332,13 @@ input:focus {
   background: #fff;
 }
 .e-checkbox__label {
+  margin-left: 8px;
+  width: fit-content;
   font-family: "Red Hat Text", Verdana, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  margin-left: 8px;
-  width: fit-content;
+  color: #000;
 }
 .e-checkbox.e-checkbox--sm .e-checkbox__mark {
   min-width: 16px;
@@ -7330,6 +7355,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   line-height: 16px;
 }
 .e-checkbox.e-checkbox--sm input {
@@ -7706,6 +7732,8 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
+  text-align: left;
 }
 .e-form-field__label.e-form-field__label--optional::after {
   content: " (valgfri)";
@@ -7724,6 +7752,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-form-field__error.e-form-field__error--visible {
   visibility: visible;
@@ -7830,6 +7859,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -7853,13 +7883,13 @@ input:focus {
   border-radius: 0px;
   padding: 0px;
   padding-bottom: 3.5px;
-  color: #000;
   cursor: pointer;
   font-family: "Red Hat Display", Verdana, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  color: #000;
 }
 .e-fileupload__input label:disabled {
   color: #bdbdbd;
@@ -7907,6 +7937,11 @@ input:focus {
   margin-bottom: 22px;
 }
 .e-position-picker__description {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 22px;
+  margin-top: 8px;
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
@@ -7915,11 +7950,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  margin-bottom: 22px;
-  margin-top: 8px;
+  color: #000;
 }
 .e-position-picker__action {
   display: flex;
@@ -7928,6 +7959,12 @@ input:focus {
 }
 
 .e-radio {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  width: fit-content;
+  position: relative;
+  cursor: pointer;
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
@@ -7936,14 +7973,9 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  width: fit-content;
-  position: relative;
+  color: #000;
   line-height: 24px;
   text-align: left;
-  cursor: pointer;
 }
 .e-radio:not(:last-child) {
   margin-bottom: 8px;
@@ -7957,6 +7989,7 @@ input:focus {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  color: #000;
 }
 .e-radio.e-radio--sm:not(:last-child) {
   margin-bottom: 0px;
@@ -8171,6 +8204,7 @@ input:focus {
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
+  color: #000;
 }
 .e-search::-ms-clear {
   display: none;
