--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
@@ -2,7 +2,7 @@
   <form class="ceg-side-filter e-form_field e-w-100" *ngFor="let formGroup of formGroupList; let i = index">
     <!--Radios-->
     <div
-      *ngIf="formGroup.formType === 'radio' && (formGroup | visibleFields: formStates)"
+      *ngIf="formGroup.formType === 'radio' && (formGroup | visibleFields: formStates:false)"
       [ngClass]="{
         'ceg-filter-margin': i !== formGroupList.length - 1
       }"
@@ -22,6 +22,7 @@
           id="{{ formGroup.label }}-{{ formField.name }}-{{ desktop }}"
           name="{{ formGroup.label }}"
           [checked]="formField.defaultValue"
+          [disabled]="!(formGroup | visibleFields: formStates:true)"
         />
         <span class="e-radio__mark"></span>
         <span class="e-radio__label">
@@ -32,13 +33,19 @@
 
     <!--Toggle-->
     <div
-      *ngIf="formGroup.formType === 'toggle' && (formGroup | visibleFields: formStates)"
+      *ngIf="formGroup.formType === 'toggle' && (formGroup | visibleFields: formStates:false)"
       [ngClass]="{
         'ceg-filter-margin': i !== formGroupList.length - 1
       }"
     >
       <label class="e-form-field__label" *ngIf="formGroup.displayGroup">{{ formGroup.displayGroup }}</label>
-      <label class="e-toggle" role="switch">
+      <label
+        class="e-toggle"
+        role="switch"
+        [ngClass]="{
+          'e-toggle---disabled': !(formGroup | visibleFields: formStates:true)
+        }"
+      >
         {{ formGroup.label }}
         <input
           class="e-toggle__input"
@@ -46,13 +53,14 @@
           id="{{ formGroup.propName }}-{{ desktop }}"
           [checked]="formGroup.defaultValue"
           (change)="onInputValueChange(formGroup, $event, undefined); updateToggleCheckboxProp(formGroup)"
+          [disabled]="!(formGroup | visibleFields: formStates:true)"
         />
       </label>
     </div>
 
     <!--Checkbox-->
     <div
-      *ngIf="formGroup.formType === 'checkbox'"
+      *ngIf="formGroup.formType === 'checkbox' && (formGroup | visibleFields: formStates:false)"
       [ngClass]="{
         'ceg-filter-margin': i !== formGroupList.length - 1
       }"
@@ -60,18 +68,21 @@
       <label class="e-form-field__label">{{ formGroup.label }}</label>
       <div *ngFor="let formField of formGroup.formGroupOptions">
         <label
-          class="e-checkbox e-checkbox--sm"
           for="{{ formField.propName }}-{{ desktop }}"
           (change)="
             onInputValueChange(formField, $event, undefined); updateToggleCheckboxProp(formGroup, formField)
           "
-          *ngIf="formField | visibleFields: formStates"
+          class="e-checkbox e-checkbox--sm"
+          [ngClass]="{
+            'e-ml-8': (formField | checkboxChildFields: componentData)
+          }"
         >
           <input
             *ngIf="formField.defaultValue"
             type="checkbox"
             id="{{ formField.propName }}-{{ desktop }}"
             name="{{ formGroup.label }}"
+            [disabled]="!(formField | visibleFields: formStates:true)"
             checked
           />
           <input
@@ -79,6 +90,7 @@
             type="checkbox"
             id="{{ formField.propName }}-{{ desktop }}"
             name="{{ formGroup.label }}"
+            [disabled]="!(formField | visibleFields: formStates:true)"
           />
           <span class="e-checkbox__mark"></span>
           <span class="e-checkbox__label">{{ formField.name }}</span>
