qa, documentation updates

--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -71,6 +71,14 @@ $datepicker-max-width: 448px;
       margin-left: 8px;
     }
   }
+  .ewc-datepicker__error-placeholder {
+    height: 26px;
+  }
+  &.ewc-datepicker--compact {
+    .ewc-datepicker__error-placeholder {
+      height: 26px;
+    }
+  }
 
   // INPUT
   .MuiInputBase-root {
