--- a/packages/web/src/app/doc-pages/components/forms/datepicker-range-doc/datepicker-range-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-range-doc/datepicker-range-doc.component.html
@@ -14,9 +14,10 @@
   <!-- SIZE -->
   <app-component-section [sectionTitle]="'Size'">
     <ng-container ngProjectAs="sectionContent">
-      There are two different sizes of the date range picker: normal and compact. Much like compact text
-      fields, the compact date range picker is a version of the text field that’s primarily designed for
-      internal systems, and shouldn’t be mixed with the other input style.
+      There are two different sizes of the date range picker; normal and compact. Just like compact text
+      fields, the compact date range picker is primarily designed for internal systems. Don't mix normal and
+      compact size inputs in one layout - choose one or the other and be consistent in your choice throughout
+      the design.
     </ng-container>
     <ng-container ngProjectAs="sectionContent">
       <p>
