valueOnChange now triggeres when datepicker doesnt have focus

--- a/packages/web/src/app/doc-pages/components/forms/datepicker-range-doc/datepicker-range-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-range-doc/datepicker-range-doc.component.html
@@ -22,7 +22,7 @@
     <ng-container ngProjectAs="sectionContent">
       <p>
         When the screen size becomes smaller than 767px, the date pickers will stack vertically instead of
-        horizontally. This state can also be forced by setting the
+        horizontally. When needed, force vertical stacking by setting the
         <span class="code-text">isVertical</span>
         property to
         <span class="code-text">true</span>
