--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,111 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <h3>Uten content og label</h3>
+      <elvia-accordion size="medium" type="normal" content="lol"></elvia-accordion>
+      <div class="e-flex e-gap-8" (click)="contentOpen = !contentOpen" style="cursor: pointer">
+        <elvia-accordion size="medium" type="single" isOpen="contentOpen" onlyButton="true"></elvia-accordion>
+        <img src="./../../../assets/feedback/smiley-in-love 1.svg" alt="Feedback emoji - happy" />
+      </div>
+      <div *ngIf="contentOpen">
+        Random content Random content Random content Random content Random content
+      </div>
+      <h3>Med content</h3>
+      <elvia-accordion isStartAligned="true" openLabel="Show" closeLabel="Hide" size="large" type="normal">
+        <div slot="content">
+          <div>Hello hello hello</div>
+        </div>
+      </elvia-accordion>
+      <!-- <h3>Uten content</h3>
+      <elvia-accordion
+        openDetailText="Hello"
+        closeDetailText="Hello"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="small"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        openDetailText="Hello"
+        closeDetailText="Hello"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="medium"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        openDetailText="Hello"
+        closeDetailText="Hello"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="large"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isFullWidth="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="small"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isFullWidth="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="medium"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isFullWidth="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="large"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        hasBoldLabel="false"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="small"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        hasBoldLabel="false"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="medium"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        hasBoldLabel="false"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="large"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isStartAligned="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="small"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isStartAligned="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="medium"
+        type="normal"
+      ></elvia-accordion>
+      <elvia-accordion
+        isStartAligned="true"
+        openLabel="Show"
+        closeLabel="Hide"
+        size="large"
+        type="normal"
+      ></elvia-accordion> -->
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -13,11 +117,11 @@
   <!--Accordion-->
   <div class="example-wrapper">
     <h3>Accordion</h3>
-    <elvia-accordion openLabel="Show" closeLabel="Hide" size="medium" type="normal">
+    <!-- <elvia-accordion openLabel="Show" closeLabel="Hide" size="medium" type="normal">
       <div slot="content">
         <h3>Hello there</h3>
       </div>
-    </elvia-accordion>
+    </elvia-accordion> -->
   </div>
 
   <!--Box-->
